crates/cli/tests/snapshots/repeated_expression__fix_310b752f30894f91510e9fff21e30e1e1a7edd46d71601cd8424e0ae1ee09071.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  x = 1;\\nin\\n  pkgs.stdenv.mkDerivation { } // pkgs.stdenv.mkDerivation { }\\n\""
---

