crates/cli/tests/snapshots/repeated_expression__fix_b062a67530673f2f2814b512bd8ec7ad085c58518dbcccae0f091146d852c1e1.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  a = pkgs.hello.meta.description;\\n  b = pkgs.hello.meta.license;\\nin\\n  null\\n\""
---

