crates/cli/tests/snapshots/repeated_expression__fix_b573bd53ccdaf69bc10f5c7b56f4b1a66971451b9b2322236f71babfff86f414.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  a = pkgs.hello.meta.description;\\n  b = pkgs.hello.bin;\\nin\\n  { inherit a b; }\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,2 @@
-let
-  a = pkgs.hello.meta.description;
-  b = pkgs.hello.bin;
-in
-  { inherit a b; }
+{ a = pkgs.hello.meta.description; b = pkgs.hello.bin; }
