crates/cli/tests/snapshots/repeated_expression__lint_310b752f30894f91510e9fff21e30e1e1a7edd46d71601cd8424e0ae1ee09071.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  x = 1;\\nin\\n  pkgs.stdenv.mkDerivation { } // pkgs.stdenv.mkDerivation { }\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = 1;
   │   ───┬──  
   │      ╰──── x is never used
───╯
[34] Warning: Expression repeated; consider extracting into a let binding
   ╭─[<temp_file_path>:4:3]
   │
 4 │   pkgs.stdenv.mkDerivation { } // pkgs.stdenv.mkDerivation { }
   │   ────────────┬───────────        ────────────┬───────────  
   │               ╰───────────────────────────────────────────── pkgs.stdenv.mkDerivation is repeated; consider extracting into a let binding
   │                                               │             
   │                                               ╰───────────── pkgs.stdenv.mkDerivation is repeated; consider extracting into a let binding
───╯
