crates/cli/tests/snapshots/repeated_expression__lint_b62ac8dcbea575ff609ef62866b3859264b197d72c264a07b380456d07a60d3a.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  a = pkgs.hello.meta;\\nin\\n  pkgs.hello.bin\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   a = pkgs.hello.meta;
   │   ──────────┬─────────  
   │             ╰─────────── a is never used
───╯
