crates/cli/tests/snapshots/repeated_expression__lint_fa59faad506bc40794f4e5b95afc42273878820a7a1dbfacd3044c5304c44e17.snap
---
source: crates/cli/tests/repeated_expression.rs
expression: "\"let\\n  a = nixpkgs.lib.types.str;\\n  b = nixpkgs.lib.types.str;\\n  c = nixpkgs.lib.types.str;\\nin\\n  null\\n\""
---
[34] Warning: Expression repeated; consider extracting into a let binding
   ╭─[<temp_file_path>:2:7]
   │
 2 │   a = nixpkgs.lib.types.str;
   │       ──────────┬──────────  
   │                 ╰──────────── nixpkgs.lib.types.str is repeated; consider extracting into a let binding
 3 │   b = nixpkgs.lib.types.str;
   │       ──────────┬──────────  
   │                 ╰──────────── nixpkgs.lib.types.str is repeated; consider extracting into a let binding
 4 │   c = nixpkgs.lib.types.str;
   │       ──────────┬──────────  
   │                 ╰──────────── nixpkgs.lib.types.str is repeated; consider extracting into a let binding
───╯
